# user

./: .gitignore  .trivyignore  .yamllint  .yamllint.yaml  Dockerfile  README.md  dockerignore  flake.nix  package-lock.json  package.json  pyproject.toml  release.config.js  requirements-dev.txt  requirements.txt  skaffold.yaml  update-dependencies.sh
.github/workflows/: ci.yaml  push.yaml  release.yaml
helm/: Chart.yaml  values-prod.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  pdb.yaml  service.yaml
scripts/release/: prepare  publish
src/: __init__.py  app.py  auth.py  config.py  main.py
src/blueprints/: health.py  version.py
src/blueprints/api/: __init__.py  user.py
src/keycloak/: __init__.py
src/routers/: health.py  version.py
src/routers/api/: __init__.py  login.py  oidc.py  route.py  well_known.py
tests/: conftest.py  test_app.py  test_database.py  test_health.py  test_metrics.py  test_version.py
tests/api/: sample_well_known_output.json  test_login.py  test_oidc.py  test_well_known.py
tests/common/: __init__.py  integration.py
