[project]
name = "user"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136,<0.137",
    "prometheus-fastapi-instrumentator>=7.1.0,<8.0",
    "gunicorn>=25.0,<26.0",
    "requests>=2.32.5,<3.0",

    "httpx>=0.28.1,<0.29.0",
    "itsdangerous>=2.2.0,<3.0",
]

[dependency-groups]
dev = [
    "pytest>=9,<10",
    "pytest-cov>=7,<8",
    "ruff>=0.15.11,<0.16.0",
    "bandit>=1.7,<2.0",
    "pip-audit>=2.7,<3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: mark integration tests",
]
